[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "plm-antibody"
version = "0.1.0"
description = "Protein Language Models for Antibody Comprehension"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch>=1.10.0",
    "transformers>=4.15.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.4.0",
    "umap-learn>=0.5.0",
    "tqdm>=4.62.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=22.0",
    "isort>=5.10",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
plm-train = "plm.cli:main"
